# rust_exif_renamer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs  cliff.toml  justfile  matrix.jsonc  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: exif.rs  exif_error.rs  helpers.rs  main.rs
