[package]
name = "exif_renamer"
authors = ["Francesco Pira (pirafrank)"]
version = "0.2.2"
edition = "2021"
repository = "https://github.com/pirafrank/rust_exif_renamer"
documentation = "https://github.com/pirafrank/rust_exif_renamer/blob/main/README.md"
description = "Rename photos in given directory to their EXIF DateTimeOriginal, and viceversa. Defaults to YYYYMMDD_hh24mmss format."
license = "MIT"
readme = "README.md"
rust-version = "1.78.0"
build = "build.rs"
keywords = ["exif", "rename", "cli", "photos"]
exclude = ["test_assets/*", "/.vscode/*", "/.github/*"]

[dependencies]
chrono = "0.4"
kamadak-exif = "0.5.5"
rayon = "1.7.0"
clap = { version = "4.4", features = ["derive"] }
little_exif = "0.6.3"

[build-dependencies]
chrono = "0.4"
